src/styles/cases.css.styl
@import "variable"

.case-index
  p,
  h2
    max-width 700px

#cases

  p,
  .case-title
    max-width 100%

  .case
    margin-bottom 40px
    display inline-block
    margin-right 3%
    vertical-align top
    width 30%

    .case-link
      margin-bottom 20px
      min-height 120px
      max-height 120px
      display block
      vertical-align bottom
      position relative
      text-align center
      margin 0 auto

    .case-image
      translate-pos(-50%,-50%)

      display inline-block
      max-width 100%
      max-height 100%
      height 70px
      position absolute
      bottom 0
      left 50%
      top 50%

    .case-about
      display inline-block
      width 100%

      .case-title
        margin-top 0

      .case-tags
        padding-top 20px

        .tag
          display inline-block

#case
  margin 40px auto 0
  max-width 100%

  .about
    width 100%

  .title
    box(border-box)
    background #fff
    font-size 1.2em
    margin 5px 0
    position relative
    width 120px

  h1
    margin-bottom 40px

  .content
    > div
      display inline-block
      vertical-align top
    .top
      width 100%
      display inline-block

    .text
      width 50%
    .information
      margin-left 40px
      width 40%
    .gallery
      li
        display inline-block
        margin 0 3% 0 0
        width 20%

        &:nth-child(2n+4)
          margin-right 0

        img
          margin 0 0 20px
          max-height auto
          max-width 100%

    .about,
    .quote
      display inline-block
      vertical-align top

    .about
      margin 0 0 70px
      padding 0
      height 175px
      position relative
      width 50%
      img
        max-height 175px
        max-width 30%
        position absolute
        bottom 0
        left 0
      .about-text
        width 65%
        position absolute
        bottom 0
        right 0
        max-height 175px
        h2
          display inline-block
          font-size 1.5em
        p
          display inline-block
          font-size 1.1em
          margin 0

    .quote
      color #444
      float right
      h3
        font-size 2em
      blockquote
        border-left none
        text-align right

    .text
      width
    .information

    p
      img
        margin 40px 0
        width 100%

        &.left
          left -100px
          position absolute
        &.right
          float right
          margin-left 20px
          position relative
          width 250px

    .team,
    .relatedServices,
    .twitter
      margin-top 40px
      padding 40px 0
      position relative

      li
        display inline-block
        margin-bottom 20px
        text-align left
        vertical-align top
        width 48%
        a
          display block
          margin-bottom 5px

    .relatedServices,
    .twitter
      li
        box(border-box)
        margin 0
        padding 0 0 0 10px
        width 49%
        &:nth-child(2n)
          padding 0 10px 0 0


    .urls
      padding 40px 0
      position relative
      li
        margin 0 0 5px

      .title
        width 200px

    .gallery
      padding-top 40px
      position relative
      width 100%

      .title
        top -50px

      .image-wrapper
        img
          max-height 231px
          margin-bottom 20px
          margin-right 20px

          &:nth-child(2n)
            margin-right 0

    .relatedServices
      padding 40px 0 0

      .title
        width 200px

    .twitter
      padding 40px 0 0

      .tweets
        li
          box(border-box)
          color #999
          font-family serifFontStack
          font-size 0.8em
          text-align left
          vertical-align top
          width 50%
          padding 0 0 0 10px
          margin 0 0 10px
          display inline-block

          a
            display inline

          .text
            color #666
            width 100%

          .time
            margin 5px 0

          .user
            font-weight bold


  .information > :first-child
    padding-top 0
    margin-top 0

